Use correct BufferUsage for picking texture target in zero-copy

We need to make sure we consistently pick the texture target, because
native GMBs may not be available for all usages.

Bug: 905569
Change-Id: Ibc325a23494597fefab3e62da71656bae30a42df
Reviewed-on: https://chromium-review.googlesource.com/c/1345074
Reviewed-by: Jonathan Backer <backer@chromium.org>
Commit-Queue: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610105}
Former-commit-id: bd677da12372ee7d2ff4cfcb8fce4f185cc7fecc